--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ h6 {
   border-radius: 5rem;
   color: #1137ca;
   text-transform: uppercase;
+  width: fit-content;
 }
 
 .btn-border {
@@ -261,6 +262,7 @@ h6 {
   border: 0.01rem solid #fff;
   font-weight: 320;
   border-radius: 5rem;
+  width: fit-content;
 }
 
 /*  navbar css start */
@@ -389,8 +391,8 @@ div#hero-section {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 30vw;
-  height: 30vw;
+  width: 200px;
+  height: 200px;
   color: transparent;
   border: 1px solid #fff;
   transform: translate(-50%, -50%);
@@ -405,6 +407,63 @@ div#hero-section {
   width: 70%;
   border-radius: 100%;
   border: 1px solid #fff;
+}
+
+/* page9 css */
+
+#page9 {
+  position: relative;
+}
+
+#page9 video {
+  scale: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  scale: 1.1;
+}
+
+#page9 .title-with-btn {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+/* page10 css */
+
+#page10 {
+  padding: 100px 0;
+}
+
+#page10 .what-is-magma {
+  width: 100%;
+  height: max-content;
+}
+
+#page10 img {
+  height: 450px;
+  border-radius: 10px;
+  margin-bottom: 60px;
+}
+
+#page10 .col-9 {
+  padding-left: 10%;
+}
+
+#page10 h5 {
+  font-weight: 450;
+  margin-bottom: 20px;
+}
+
+#page10 p {
+  font-size: 3rem;
+  opacity: 0.8;
+  margin-bottom: 50px;
 }
 
 @media screen and (max-width: 1800px) {
