--- a/style.css
+++ b/style.css
@@ -470,6 +470,7 @@ div#hero-section {
 
 #page11 {
   padding: 100px 0;
+  background-color: #03278e;
 }
 
 #page11 .container {
@@ -484,7 +485,7 @@ div#hero-section {
 
 #page11 h2 {
   font-size: 10rem;
-  margin-bottom: 35%;
+  margin-bottom: 10%;
 }
 
 .dtt-details {
@@ -503,6 +504,101 @@ div#hero-section {
 
 .dtt-details > div p {
   font-size: 2rem;
+}
+
+#page11 .right-img {
+  padding-left: 30%;
+}
+
+/* page12 css */
+
+div#page12 {
+  padding: 100px 0;
+  background: #fff;
+  color: #000;
+}
+div#page12 h1 {
+  margin-bottom: 60px;
+}
+.blog-cols.flex.col {
+  gap: 15px;
+}
+div#page12 img {
+  height: 250px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+.blog-details {
+  padding-left: 50px;
+}
+.blog-details p {
+  font-size: 20px;
+  font-weight: 320;
+  margin-bottom: 10px;
+}
+
+/* page13 css */
+
+#page13 {
+  width: 100%;
+  height: 80vh;
+  background-color: #000;
+  display: flex;
+  align-items: center;
+}
+
+#page13 h1 {
+  max-width: 50%;
+  margin-bottom: 3rem;
+}
+
+#page13 .btn {
+  background-color: #0a3cce;
+  color: #fff;
+}
+
+/* page14 css start */
+
+#page14 {
+  background: #000;
+  padding: 60px 0;
+}
+
+.social-link > div {
+  padding: 30px 100px;
+  border-top: 0.2px solid #ffffff5a;
+  position: relative;
+}
+
+.social-link > div::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 0px;
+  background: #0a3cce;
+  z-index: 1;
+  transform: translateY(-50%);
+  transition: all 0.5s ease;
+}
+
+.social-link > div:hover::before {
+  height: 100%;
+}
+
+.social-link > div:last-child {
+  border-bottom: 0.2px solid #ffffff5a;
+}
+
+.social-link h2,
+.social-link i {
+  z-index: 9;
+  position: relative;
+}
+
+.social-link > div i {
+  font-size: 40px;
 }
 
 @media screen and (max-width: 1800px) {
