--- a/style.css
+++ b/style.css
@@ -484,7 +484,6 @@ div#hero-section {
 }
 
 #page11 h2 {
-  font-size: 10rem;
   margin-bottom: 10%;
 }
 
@@ -603,6 +602,194 @@ div#page12 img {
 
 @media screen and (max-width: 1800px) {
   html {
-    font-size: 50.5%;
+    font-size: 45.5%;
+  }
+}
+
+@media screen and (max-width: 1440px) {
+  .h2 {
+    font-size: 6rem;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  h1 {
+    font-size: 7rem;
+    line-height: 1.5;
+  }
+
+  h2,
+  .h2 {
+    font-size: 4.5rem;
+    line-height: 1.5;
+  }
+
+  h3 {
+    font-size: 4rem;
+    line-height: 1.2;
+  }
+
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 75%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+
+  #page10 .col-9 {
+    padding-left: 0;
+    padding-top: 40px;
+  }
+
+  .dtt-details > div {
+    gap: 10px;
+  }
+
+  .blog-details {
+    padding-left: 30px;
+  }
+
+  .social-link > div {
+    padding: 30px 40px;
+  }
+}
+
+@media screen and (max-width: 769px) {
+  .col-1,
+  .col-2,
+  .col-3,
+  .col-4,
+  .col-5,
+  .col-6,
+  .col-7,
+  .col-8,
+  .col-9,
+  .col-10,
+  .col-11,
+  .col-12 {
+    width: 100%;
+  }
+
+  h1 {
+    font-size: 40px;
+    line-height: 1.5;
+  }
+
+  h2,
+  .h2 {
+    font-size: 35px;
+    line-height: 1.5;
+  }
+
+  h3 {
+    font-size: 30px;
+    line-height: 1.2;
+  }
+
+  .nav {
+    padding: 3rem 2rem;
+  }
+
+  .hero-overlay {
+    padding-left: 9%;
+    padding-bottom: 9%;
+    padding-right: 9%;
+  }
+
+  .hero-content {
+    gap: 3rem 0;
+  }
+
+  .hero-caption h6 {
+    width: 100%;
+    margin-bottom: 16px;
+  }
+
+  #page11 .right-img {
+    padding-left: 0;
+    padding-top: 16px;
+  }
+
+  .blog-details {
+    padding-left: 0;
+    padding-bottom: 50px;
+    padding-top: 10px;
+  }
+
+  #page13 h1 {
+    max-width: 100%;
+    margin-bottom: 3rem;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .h2,
+  h2 {
+    font-size: 25px;
+    text-align: justify;
+  }
+
+  h3 {
+    font-size: 22px;
+  }
+
+  #page10 p {
+    font-size: 16px;
+  }
+
+  #page10 img {
+    height: 180px;
+    margin-bottom: 30px;
+  }
+
+  #page11 {
+    padding: 40px 0;
+  }
+
+  div#page12 {
+    padding: 50px 0;
+  }
+
+  div#page12 img {
+    height: 150px;
+    border-radius: 6px;
+  }
+
+  .blog-details {
+    padding-bottom: 20px;
+  }
+
+  #page13 {
+    height: 50vh;
   }
 }
